# nodaS

./: README.md  main.py  pyproject.toml
analysis_data/: ramen_count_taste.csv  ramen_count_taste_1.csv  ramen_count_taste_23ward.csv
data/: ramen_1.json  ramen_10.json  ramen_2.json  ramen_3.json  ramen_4.json  ramen_5.json  ramen_6.json  ramen_7.json  ramen_8.json  ramen_9.json  ramen_R9_1.json  ramen_R9_10.json  ramen_R9_11.json  ramen_R9_12.json  ramen_R9_13.json  ramen_R9_14.json  ramen_R9_15.json  ramen_R9_16.json  ramen_R9_17.json  ramen_R9_18.json  ramen_R9_19.json  ramen_R9_2.json  ramen_R9_20.json  ramen_R9_21.json  ramen_R9_22.json  ramen_R9_23.json  ramen_R9_24.json  ramen_R9_25.json  ramen_R9_26.json  ramen_R9_27.json  ramen_R9_28.json  ramen_R9_29.json  ramen_R9_3.json  ramen_R9_30.json  ramen_R9_31_40.json  ramen_R9_4.json  ramen_R9_41.json  ramen_R9_42.json  ramen_R9_43.json  ramen_R9_44.json  (+23 more)
map/: map.html  map_ranking.html  map_station.html  map_ward_sample.html  ramen_rank_map.html
src/: count_taste.py  main.py  make_ratio_graph.py  make_station_graph.py  ramen_map_rank.py  scrap_tabelog.py  tmp.py  write_layermap.py  write_map.py  write_map_station.py  write_ranking_piechart.py  write_rankingmap.py
