[tool.poetry]
name = "nodas"
version = "0.1.0"
description = ""
authors = ["hoshi23 <star.tokyo0310@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
pandas = "^2.0.1"
requests = "^2.29.0"
ndjson = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
